--- a/src/SuperGole/view/internalFrame/JInternalFrameNovoJogo.form
+++ b/src/SuperGole/view/internalFrame/JInternalFrameNovoJogo.form
@@ -1435,7 +1435,7 @@
                       <Component id="bCustBen6" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="CustoBen6" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="57" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -1592,7 +1592,7 @@
                       <Component id="bCustBen7" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="CustoBen7" alignment="1" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="57" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
